test/types/records/split-init/error-never-initialized-values-global4.good
error-never-initialized-values-global4.chpl:3: error: Cannot default-initialize a variable with generic type
error-never-initialized-values-global4.chpl:3: note: 'qq' has generic type 'C?'
error-never-initialized-values-global4.chpl:3: note: 'C?' indicates a nilable class with any management
error-never-initialized-values-global4.chpl:3: note: consider adding a management decorator such as 'owned', 'shared', 'borrowed', or 'unmanaged'
