test/types/records/split-init/error-never-initialized-values-global4.chpl
class C { }

var qq: C?;
